<resources>
<!--  APP NAME AND HEADER  -->
    <string name="app_name">GeorgeTheVetrinator</string>
    <string name="title_george">George</string>
    <string name="title_the">The</string>
    <string name="title_vetrinator">Vetrinator</string>


<!--  LAYOUTS AND ACTIVITIES  -->
    <string name="normal_mode">Normal Mode</string>
    <string name="endless_mode">Endless Mode</string>
    <string name="et_hapali">Et ha\'pali...</string>

<!--  OBSTACLE CRASH MESSAGES  -->
    <string name="obstacle_neta_crash_msg">אני לא פותח את השק הזה נטע</string>\
    <string name="obstacle_kid_crash_msg">לא פה ילד, משם הכי הטוב</string>
    <string name="obstacle_kings_crash_msg">הקלף שאני הכי שונא אותו זה זוג קינג</string>
    <string name="obstacle_eight_crash_msg">בריבר עוד 8 פטרוזיליה</string>
    <string name="obstacle_fallback_crash_msg">אווו... את הפלי</string>
    <string name="reward_coin_collide_msg">Its a coin!</string>

<!--  MESSAGES  -->
    <string name="game_over_msg">Game Over!</string>
    <string name="vibration_msg">Bzzzzzzzzzzzzzzzzzzzzzzzzzz!</string>

<!--  LOGGING TAGS  -->
    <string name="log_tag_game_loop">GameLoop</string>
    <string name="log_tag_game_status">GameStatus</string>

<!--  ACCESSIBILITY DESCRIPTIONS  -->
    <string name="desc_move_left">Move Left</string>
    <string name="desc_move_right">Move Right</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="game_over">GAME OVER</string>
    <string name="et_ha_pali">Et ha\'pali...</string>
    <string name="restart_game">Restart</string>
    <string name="back_home">Go back home</string>
    <string name="save_score">Save Score</string>
    <string name="top_10_vetrinators">Top 10 Vetrinators</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="register">REGISTER</string>
    <string name="cancel">CANCEL</string>
    <string name="boost_active">Boost active</string>
    <string name="settings_title">GAME SETTINGS</string>

<!--  GAME SCORE  -->
    <string name="score_label_with_colon">YOUR SCORE: </string>

<!--  SWITCH TOGGLES  -->
    <string name="label_controls">Controls</string>
    <string name="switch_buttons">BUTTONS</string>
    <string name="switch_tilt">TILT</string>
    <string name="label_difficulty">Difficulty</string>
    <string name="switch_easy">EASY</string>
    <string name="switch_hard">HARD</string>
    <string name="label_game_mode">Game Mode</string>
    <string name="switch_normal">NORMAL</string>
    <string name="switch_endless">ENDLESS</string>


</resources>