<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="@dimen/app_header_size"
        android:layout_height="@dimen/app_header_size"
        android:src="@drawable/ic_app"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/separator_header"
        android:layout_width="@dimen/card_stroke_width"
        android:layout_height="@dimen/app_header_size"
        android:background="@color/black"
        android:alpha="0.15"
        app:layout_constraintTop_toTopOf="@id/iv_app_icon"
        app:layout_constraintBottom_toBottomOf="@id/iv_app_icon"
        app:layout_constraintStart_toEndOf="@id/iv_app_icon" />

    <LinearLayout
        android:id="@+id/container_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_header_separator_margin"
        android:orientation="vertical"
        android:paddingTop="@dimen/app_header_vertical_correction"
        app:layout_constraintBottom_toBottomOf="@id/iv_app_icon"
        app:layout_constraintStart_toEndOf="@id/separator_header"
        app:layout_constraintTop_toTopOf="@id/iv_app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_george"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixel_purl"
            android:includeFontPadding="false"
            android:text="@string/title_george"
            android:textColor="@color/brown_george"
            android:textSize="@dimen/text_title_huge" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_the"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixel_purl"
            android:includeFontPadding="false"
            android:text="@string/title_the"
            android:textColor="@color/brown_george"
            android:textSize="@dimen/text_title_huge" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_vetrinator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixel_purl"
            android:includeFontPadding="false"
            android:text="@string/title_vetrinator"
            android:textColor="@color/brown_george"
            android:textSize="@dimen/text_title_huge" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>