<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingVertical="@dimen/spacing_s">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/pixel_purl"
        android:text="@string/label_difficulty"
        android:textColor="@color/brown_george"
        android:textSize="@dimen/text_size_medium" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/switch_height"
        android:background="@drawable/bg_switch">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:checked="false"
            android:textColor="@color/white"
            app:switchMinWidth="@dimen/switch_width_standard"
            app:thumbTint="@null"
            app:trackTint="@null"
            app:track="@drawable/bg_switch_track_selector"
            android:thumb="@drawable/bg_switch_thumb_selector" />

        <LinearLayout
            android:layout_width="@dimen/switch_width_standard"
            android:layout_height="@dimen/switch_height"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_easy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/switch_easy"
                tools:textColor="@color/brown_george"
                android:textColor="@drawable/tv_switch"
                android:textSize="@dimen/text_size_switch"
                android:textStyle="bold"
                android:fontFamily="@font/pixel_purl"
                android:translationY="0.5dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_hard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/switch_hard"
                android:textColor="@drawable/tv_switch"
                android:textSize="@dimen/text_size_switch"
                android:textStyle="bold"
                android:fontFamily="@font/pixel_purl"
                android:translationY="0.5dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>